Source/ISS/Development/NAMS/M9Concur/Vendor/Include/terM9.h

ViStatus _VI_FUNC terM9_getBackplaneSyncState (ViSession vi, ViInt32 syncIndex,
                              ViPInt32 state);
ViStatus _VI_FUNC terM9_getChannelPinOpcode (ViSession vi, ViInt32 scopeIndex,
                              ViPInt32 opcode);
ViStatus _VI_FUNC terM9_getDynamicPattern (ViSession vi, ViPInt32
                              clocksPerPattern, ViPInt32 TSETIndex, ViPInt32
                              controlOpcode, ViPInt32 controlCount, ViPInt32
                              controlCond, ViPBoolean failCapture, ViPBoolean
                              resultCapture, ViPInt32 PSETIndex, ViPBoolean
                              probeCapture);
ViStatus _VI_FUNC terM9_getDynamicPatternClocksPerPattern (ViSession vi,
                              ViPInt32 clocksPerPattern);
ViStatus _VI_FUNC terM9_getDynamicPatternControl (ViSession vi, ViPInt32
                              controlOpcode, ViPInt32 controlCount, ViPInt32
                              controlCond);
ViStatus _VI_FUNC terM9_getDynamicPatternCount (ViSession vi, ViPInt32
                              patternCount);
ViStatus _VI_FUNC terM9_getDynamicPatternFailCapture (ViSession vi, ViPBoolean
                              failCapture);
ViStatus _VI_FUNC terM9_getDynamicPatternIndex (ViSession vi, ViPInt32
                              patternIndex);
ViStatus _VI_FUNC terM9_getDynamicPatternProbeCapture (ViSession vi, ViPBoolean
                              probeCapture);
ViStatus _VI_FUNC terM9_getDynamicPatternProbeTimingSetIndex (ViSession vi,
                              ViPInt32 PSETIndex);
ViStatus _VI_FUNC terM9_getDynamicPatternResultCapture (ViSession vi, ViPBoolean
                              resultCapture);
ViStatus _VI_FUNC terM9_getDynamicPatternTimingSetIndex (ViSession vi, ViPInt32
                              TSETIndex);
ViStatus _VI_FUNC terM9_getEXT1InLogicSelect (ViSession vi, ViPInt32
                              logicSelect);
  
ViStatus _VI_FUNC terM9_getEXT2InLogicSelect (ViSession vi, ViPInt32
                              logicSelect);
ViStatus _VI_FUNC terM9_getFrontPanelSyncState (ViSession vi, ViInt32 syncIndex,
                              ViPInt32 state);
ViStatus _VI_FUNC terM9_getGroupGroupOpcode (ViSession vi, ViInt32 scopeIndex,
                              ViPInt32 groupOpcode, ViUInt32 _VI_FAR
                              groupValue[]);
ViStatus _VI_FUNC terM9_getLevelSet (ViSession vi, ViInt32 scopeIndex, ViInt32
                              levelSetIndex, ViPReal64 VIHValue, ViPReal64
                              VILValue, ViPReal64 VOHValue, ViPReal64 VOLValue,
                              ViPReal64 IOHValue, ViPReal64 IOLValue, ViPReal64
                              VCOMValue, ViPInt32 slewRate);
ViStatus _VI_FUNC terM9_getLevelSetIOH (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViPReal64 IOHValue);
ViStatus _VI_FUNC terM9_getLevelSetIOL (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViPReal64 IOLValue);
ViStatus _VI_FUNC terM9_getLevelSetProbe (ViSession vi, ViPReal64 PRHIValue,
                              ViPReal64 PRLOValue);
ViStatus _VI_FUNC terM9_getLevelSetProbePRHI (ViSession vi, ViPReal64
                              PRHIValue);
ViStatus _VI_FUNC terM9_getLevelSetProbePRLO (ViSession vi, ViPReal64
                              PRLOValue);
ViStatus _VI_FUNC terM9_getLevelSetSlewRate (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViPInt32 slewRate);
ViStatus _VI_FUNC terM9_getLevelSetVCOM (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViPReal64 VCOMValue);
ViStatus _VI_FUNC terM9_getLevelSetVIH (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViPReal64 VIHValue);
ViStatus _VI_FUNC terM9_getLevelSetVIL (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViPReal64 VILValue);
ViStatus _VI_FUNC terM9_getLevelSetVOH (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViPReal64 VOHValue);
ViStatus _VI_FUNC terM9_getLevelSetVOL (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViPReal64 VOLValue);
ViStatus _VI_FUNC terM9_getPatternClutch (ViSession vi, ViPBoolean enable,
                              ViPInt32 polarity, ViPInt32 logicSelect);
ViStatus _VI_FUNC terM9_getPatternClutchEnable (ViSession vi, ViPBoolean
                              enable);
ViStatus _VI_FUNC terM9_getPatternClutchLogicSelect (ViSession vi, ViPInt32
                              logicSelect);
ViStatus _VI_FUNC terM9_getPatternClutchPolarity (ViSession vi, ViPInt32
                              polarity);
ViStatus _VI_FUNC terM9_getResultIndex (ViSession vi, ViPInt32 resultIndex);
ViStatus _VI_FUNC terM9_getSystemClockOutLogicSelect (ViSession vi, ViPInt32
                              logicSelect);
ViStatus _VI_FUNC terM9_getSystemClockOutPath (ViSession vi, ViPInt32 outPath);
ViStatus _VI_FUNC terM9_getSystemClockReference (ViSession vi, ViPInt32
                              reference);
ViStatus _VI_FUNC terM9_getSystemClutch (ViSession vi, ViPBoolean enable,
                              ViPInt32 polarity, ViPInt32 logicSelect);
ViStatus _VI_FUNC terM9_getSystemClutchEnable (ViSession vi, ViPBoolean enable);
ViStatus _VI_FUNC terM9_getSystemClutchLogicSelect (ViSession vi, ViPInt32
                              logicSelect);
ViStatus _VI_FUNC terM9_getSystemClutchPolarity (ViSession vi, ViPInt32
                              polarity);
ViStatus _VI_FUNC terM9_prepareDynamicPatternSetLoading (ViSession vi);
ViStatus _VI_FUNC terM9_resetChannelSignature (ViSession vi, ViInt32
                              pinListCount, ViInt32 _VI_FAR pinList[]);
ViStatus _VI_FUNC terM9_setBackplaneSyncState (ViSession vi, ViInt32 syncIndex,
                              ViInt32 state);
ViStatus _VI_FUNC terM9_setChannelPinOpcode (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 opcode);
ViStatus _VI_FUNC terM9_setDynamicPattern (ViSession vi, ViInt32
                              clocksPerPattern, ViInt32 TSETIndex, ViInt32
                              controlOpcode, ViInt32 controlCount, ViInt32
                              controlCond, ViBoolean failCapture, ViBoolean
                              resultCapture, ViInt32 PSETIndex, ViBoolean
                              probeCapture);
ViStatus _VI_FUNC terM9_setDynamicPatternClocksPerPattern (ViSession vi, ViInt32
                              clocksPerPattern);
ViStatus _VI_FUNC terM9_setDynamicPatternControl (ViSession vi, ViInt32
                              controlOpcode, ViInt32 controlCount, ViInt32
                              controlCond);
ViStatus _VI_FUNC terM9_setDynamicPatternFailCapture (ViSession vi, ViBoolean
                              failCapture);
ViStatus _VI_FUNC terM9_setDynamicPatternIndex (ViSession vi, ViInt32
                              patternIndex);
ViStatus _VI_FUNC terM9_setDynamicPatternProbeCapture (ViSession vi, ViBoolean
                              probeCapture);
ViStatus _VI_FUNC terM9_setDynamicPatternProbeTimingSetIndex (ViSession vi,
                              ViInt32 PSETIndex);
ViStatus _VI_FUNC terM9_setDynamicPatternResultCapture (ViSession vi, ViBoolean
                              resultCapture);
ViStatus _VI_FUNC terM9_setDynamicPatternTimingSetIndex (ViSession vi, ViInt32
                              TSETIndex);
ViStatus _VI_FUNC terM9_setEXT1InLogicSelect (ViSession vi, ViInt32
                              logicSelect);
  
ViStatus _VI_FUNC terM9_setEXT2InLogicSelect (ViSession vi, ViInt32
                              logicSelect);
ViStatus _VI_FUNC terM9_setFrontPanelSyncState (ViSession vi, ViInt32 syncIndex,
                              ViInt32 state);
ViStatus _VI_FUNC terM9_setGroupGroupOpcode (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 groupOpcode, ViUInt32 _VI_FAR
                              groupValue[]);
ViStatus _VI_FUNC terM9_setLevelSet (ViSession vi, ViInt32 scopeIndex, ViInt32
                              levelSetIndex, ViReal64 VIHValue, ViReal64
                              VILValue, ViReal64 VOHValue, ViReal64 VOLValue,
                              ViReal64 IOHValue, ViReal64 IOLValue, ViReal64
                              VCOMValue, ViInt32 slewRate);
ViStatus _VI_FUNC terM9_setLevelSetIOH (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViReal64 IOHValue);
ViStatus _VI_FUNC terM9_setLevelSetIOL (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViReal64 IOLValue);
ViStatus _VI_FUNC terM9_setLevelSetProbe (ViSession vi, ViReal64 PRHIValue,
                              ViReal64 PRLOValue);
ViStatus _VI_FUNC terM9_setLevelSetProbePRHI (ViSession vi, ViReal64 PRHIValue);
ViStatus _VI_FUNC terM9_setLevelSetProbePRLO (ViSession vi, ViReal64 PRLOValue);
ViStatus _VI_FUNC terM9_setLevelSetSlewRate (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViInt32 slewRate);
ViStatus _VI_FUNC terM9_setLevelSetVCOM (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViReal64 VCOMValue);
ViStatus _VI_FUNC terM9_setLevelSetVIH (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViReal64 VIHValue);
ViStatus _VI_FUNC terM9_setLevelSetVIL (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViReal64 VILValue);
ViStatus _VI_FUNC terM9_setLevelSetVOH (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViReal64 VOHValue);
ViStatus _VI_FUNC terM9_setLevelSetVOL (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViReal64 VOLValue);
ViStatus _VI_FUNC terM9_setPatternClutch (ViSession vi, ViBoolean enable,
                              ViInt32 polarity, ViInt32 logicSelect);
ViStatus _VI_FUNC terM9_setPatternClutchEnable (ViSession vi, ViBoolean enable);
ViStatus _VI_FUNC terM9_setPatternClutchLogicSelect (ViSession vi, ViInt32
                              logicSelect);
ViStatus _VI_FUNC terM9_setPatternClutchPolarity (ViSession vi, ViInt32
                              polarity);
ViStatus _VI_FUNC terM9_setSystemClock (ViSession vi, ViInt32 divider, ViInt32
                              edge, ViInt32 mode, ViInt32 reference, ViInt32
                              outPath, ViInt32 logicSelect);
ViStatus _VI_FUNC terM9_setSystemClockDivider (ViSession vi, ViInt32 divider);
ViStatus _VI_FUNC terM9_setSystemClockEdge (ViSession vi, ViInt32 edge);
ViStatus _VI_FUNC terM9_setSystemClockMode (ViSession vi, ViInt32 mode);
ViStatus _VI_FUNC terM9_setSystemClockOutLogicSelect (ViSession vi, ViInt32
                              logicSelect);
ViStatus _VI_FUNC terM9_setSystemClockOutPath (ViSession vi, ViInt32 outPath);
ViStatus _VI_FUNC terM9_setSystemClockReference (ViSession vi, ViInt32
                              reference);
ViStatus _VI_FUNC terM9_setSystemClutch (ViSession vi, ViBoolean enable, ViInt32
                              polarity, ViInt32 logicSelect);
ViStatus _VI_FUNC terM9_setSystemClutchEnable (ViSession vi, ViBoolean enable);
ViStatus _VI_FUNC terM9_setSystemClutchLogicSelect (ViSession vi, ViInt32
                              logicSelect);
ViStatus _VI_FUNC terM9_setSystemClutchPolarity (ViSession vi, ViInt32
                              polarity);