Source/Core/Source/System/TPExec20120313/src/TERM9.BAS


Declare Function terM9_getSystemClockReference Lib "terM9_32.dll" (ByVal vi As Long, reference As Long) As Long

Declare Function terM9_getSystemClockOutPath Lib "terM9_32.dll" (ByVal vi As Long, outpath As Long) As Long

Declare Function terM9_getSystemClockOutLogicSelect Lib "terM9_32.dll" (ByVal vi As Long, logicSelect As Long) As Long

Declare Function terM9_setSystemClock Lib "terM9_32.dll" (ByVal vi As Long, ByVal divider As Long, ByVal edge As Long, ByVal mode As Long, ByVal reference As Long, ByVal outpath As Long, ByVal logicSelect As Long) As Long

Declare Function terM9_setSystemClockDivider Lib "terM9_32.dll" (ByVal vi As Long, ByVal divider As Long) As Long

Declare Function terM9_setSystemClockEdge Lib "terM9_32.dll" (ByVal vi As Long, ByVal edge As Long) As Long

Declare Function terM9_setSystemClockMode Lib "terM9_32.dll" (ByVal vi As Long, ByVal mode As Long) As Long

Declare Function terM9_setSystemClockReference Lib "terM9_32.dll" (ByVal vi As Long, ByVal reference As Long) As Long

Declare Function terM9_setSystemClockOutPath Lib "terM9_32.dll" (ByVal vi As Long, ByVal outpath As Long) As Long

Declare Function terM9_setSystemClockOutLogicSelect Lib "terM9_32.dll" (ByVal vi As Long, ByVal logicSelect As Long) As Long

Declare Function terM9_getSystemClutch Lib "terM9_32.dll" (ByVal vi As Long, enable As Integer, polarity As Long, logicSelect As Long) As Long

Declare Function terM9_getSystemClutchEnable Lib "terM9_32.dll" (ByVal vi As Long, enable As Integer) As Long

Declare Function terM9_getSystemClutchPolarity Lib "terM9_32.dll" (ByVal vi As Long, polarity As Long) As Long

Declare Function terM9_getSystemClutchLogicSelect Lib "terM9_32.dll" (ByVal vi As Long, logicSelect As Long) As Long

Declare Function terM9_setSystemClutch Lib "terM9_32.dll" (ByVal vi As Long, ByVal enable As Integer, ByVal polarity As Long, ByVal logicSelect As Long) As Long

Declare Function terM9_setSystemClutchEnable Lib "terM9_32.dll" (ByVal vi As Long, ByVal enable As Integer) As Long

Declare Function terM9_setSystemClutchPolarity Lib "terM9_32.dll" (ByVal vi As Long, ByVal polarity As Long) As Long

Declare Function terM9_setSystemClutchLogicSelect Lib "terM9_32.dll" (ByVal vi As Long, ByVal logicSelect As Long) As Long

Declare Function terM9_getPatternClutch Lib "terM9_32.dll" (ByVal vi As Long, enable As Integer, polarity As Long, logicSelect As Long) As Long

Declare Function terM9_getPatternClutchEnable Lib "terM9_32.dll" (ByVal vi As Long, enable As Integer) As Long

Declare Function terM9_getPatternClutchPolarity Lib "terM9_32.dll" (ByVal vi As Long, polarity As Long) As Long

Declare Function terM9_getPatternClutchLogicSelect Lib "terM9_32.dll" (ByVal vi As Long, logicSelect As Long) As Long

Declare Function terM9_setPatternClutch Lib "terM9_32.dll" (ByVal vi As Long, ByVal enable As Integer, ByVal polarity As Long, ByVal logicSelect As Long) As Long

Declare Function terM9_setPatternClutchEnable Lib "terM9_32.dll" (ByVal vi As Long, ByVal enable As Integer) As Long

Declare Function terM9_setPatternClutchPolarity Lib "terM9_32.dll" (ByVal vi As Long, ByVal polarity As Long) As Long

Declare Function terM9_setPatternClutchLogicSelect Lib "terM9_32.dll" (ByVal vi As Long, ByVal logicSelect As Long) As Long

Declare Function terM9_getEXT1InLogicSelect Lib "terM9_32.dll" (ByVal vi As Long, logicSelect As Long) As Long

Declare Function terM9_setEXT1InLogicSelect Lib "terM9_32.dll" (ByVal vi As Long, ByVal logicSelect As Long) As Long

Declare Function terM9_getEXT2InLogicSelect Lib "terM9_32.dll" (ByVal vi As Long, logicSelect As Long) As Long

Declare Function terM9_setEXT2InLogicSelect Lib "terM9_32.dll" (ByVal vi As Long, ByVal logicSelect As Long) As Long

Declare Function terM9_getLevelSet Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal LevelIdx As Long, VIHValue As Double, VILValue As Double, VOHValue As Double, VOLValue As Double, IOHValue As Double, IOLValue As Double, VCOMValue As Double, slewRate As Long) As Long

Declare Function terM9_getLevelSetIOH Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal LevelIdx As Long, IOHValue As Double) As Long

Declare Function terM9_getLevelSetIOL Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal LevelIdx As Long, IOLValue As Double) As Long

Declare Function terM9_getLevelSetVCOM Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal LevelIdx As Long, VCOMValue As Double) As Long

Declare Function terM9_getLevelSetVIH Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal LevelIdx As Long, VIHValue As Double) As Long

Declare Function terM9_getLevelSetVIL Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal LevelIdx As Long, VILValue As Double) As Long

Declare Function terM9_getLevelSetVOH Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal LevelIdx As Long, VOHValue As Double) As Long

Declare Function terM9_getLevelSetVOL Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal LevelIdx As Long, VOLValue As Double) As Long

Declare Function terM9_getLevelSetSlewRate Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal LevelIdx As Long, slewRate As Long) As Long

Declare Function terM9_setLevelSet Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal LevelIdx As Long, ByVal VIHValue As Double, ByVal VILValue As Double, ByVal VOHValue As Double, ByVal VOLValue As Double, ByVal IOHValue As Double, ByVal IOLValue As Double, ByVal VCOMValue As Double, ByVal slewRate As Long) As Long

Declare Function terM9_setLevelSetIOH Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal LevelIdx As Long, ByVal IOHValue As Double) As Long

Declare Function terM9_setLevelSetIOL Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal LevelIdx As Long, ByVal IOLValue As Double) As Long

Declare Function terM9_setLevelSetVCOM Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal LevelIdx As Long, ByVal VCOMValue As Double) As Long

Declare Function terM9_setLevelSetVIH Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal LevelIdx As Long, ByVal VIHValue As Double) As Long

Declare Function terM9_setLevelSetVIL Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal LevelIdx As Long, ByVal VILValue As Double) As Long

Declare Function terM9_setLevelSetVOH Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal LevelIdx As Long, ByVal VOHValue As Double) As Long

Declare Function terM9_setLevelSetVOL Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal LevelIdx As Long, ByVal VOLValue As Double) As Long

Declare Function terM9_setLevelSetSlewRate Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal LevelIdx As Long, ByVal slewRate As Long) As Long

Declare Function terM9_getLevelSetProbe Lib "terM9_32.dll" (ByVal vi As Long, PRHIValue As Double, PRLOValue As Double) As Long

Declare Function terM9_getLevelSetProbePRHI Lib "terM9_32.dll" (ByVal vi As Long, PRHIValue As Double) As Long

Declare Function terM9_getLevelSetProbePRLO Lib "terM9_32.dll" (ByVal vi As Long, PRLOValue As Double) As Long

Declare Function terM9_setLevelSetProbe Lib "terM9_32.dll" (ByVal vi As Long, ByVal PRHIValue As Double, ByVal PRLOValue As Double) As Long

Declare Function terM9_setLevelSetProbePRLO Lib "terM9_32.dll" (ByVal vi As Long, ByVal PRLOValue As Double) As Long

Declare Function terM9_setLevelSetProbePRHI Lib "terM9_32.dll" (ByVal vi As Long, ByVal PRHIValue As Double) As Long

Declare Function terM9_getChannelPinOpcode Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, opcode As Long) As Long

Declare Function terM9_setChannelPinOpcode Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal opcode As Long) As Long

Declare Function terM9_getGroupGroupOpcode Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, groupOpcode As Long, groupValue As Long) As Long

Declare Function terM9_setGroupGroupOpcode Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal groupOpcode As Long, groupValue As Long) As Long

Declare Function terM9_getFrontPanelSyncState Lib "terM9_32.dll" (ByVal vi As Long, ByVal syncIdx As Long, state As Long) As Long

Declare Function terM9_setFrontPanelSyncState Lib "terM9_32.dll" (ByVal vi As Long, ByVal syncIdx As Long, ByVal state As Long) As Long

Declare Function terM9_getBackplaneSyncState Lib "terM9_32.dll" (ByVal vi As Long, ByVal syncIdx As Long, state As Long) As Long

Declare Function terM9_setBackplaneSyncState Lib "terM9_32.dll" (ByVal vi As Long, ByVal syncIdx As Long, ByVal state As Long) As Long

Declare Function terM9_resetChannelSignature Lib "terM9_32.dll" (ByVal vi As Long, ByVal pinListCount As Long, pinList As Long) As Long

Declare Function terM9_prepareDynamicPatternSetLoading Lib "terM9_32.dll" (ByVal vi As Long) As Long

Declare Function terM9_getDynamicPattern Lib "terM9_32.dll" (ByVal vi As Long, clocksPerPattern As Long, TSETIdx As Long, controlOpcode As Long, controlCount As Long, controlCond As Long, failCapture As Integer, resultCapture As Integer, PSETIdx As Long, probeCapture As Integer) As Long

Declare Function terM9_getDynamicPatternClocksPerPattern Lib "terM9_32.dll" (ByVal vi As Long, clocksPerPattern As Long) As Long

Declare Function terM9_getDynamicPatternTimingSetIndex Lib "terM9_32.dll" (ByVal vi As Long, TSETIdx As Long) As Long

Declare Function terM9_getDynamicPatternControl Lib "terM9_32.dll" (ByVal vi As Long, controlOpcode As Long, controlCount As Long, controlCond As Long) As Long

Declare Function terM9_getDynamicPatternFailCapture Lib "terM9_32.dll" (ByVal vi As Long, failCapture As Integer) As Long

Declare Function terM9_getDynamicPatternResultCapture Lib "terM9_32.dll" (ByVal vi As Long, resultCapture As Integer) As Long

Declare Function terM9_getDynamicPatternProbeTimingSetIndex Lib "terM9_32.dll" (ByVal vi As Long, PSETIdx As Long) As Long

Declare Function terM9_getDynamicPatternProbeCapture Lib "terM9_32.dll" (ByVal vi As Long, probeCapture As Integer) As Long

Declare Function terM9_getDynamicPatternCount Lib "terM9_32.dll" (ByVal vi As Long, patternCount As Long) As Long

Declare Function terM9_getDynamicPatternIndex Lib "terM9_32.dll" (ByVal vi As Long, patternIdx As Long) As Long

Declare Function terM9_getResultIndex Lib "terM9_32.dll" (ByVal vi As Long, resultIdx As Long) As Long

Declare Function terM9_setDynamicPattern Lib "terM9_32.dll" (ByVal vi As Long, ByVal clocksPerPattern As Long, ByVal TSETIdx As Long, ByVal controlOpcode As Long, ByVal controlCount As Long, ByVal controlCond As Long, ByVal failCapture As Integer, ByVal resultCapture As Integer, ByVal PSETIdx As Long, ByVal probeCapture As Integer) As Long

Declare Function terM9_setDynamicPatternClocksPerPattern Lib "terM9_32.dll" (ByVal vi As Long, ByVal clocksPerPattern As Long) As Long

Declare Function terM9_setDynamicPatternTimingSetIndex Lib "terM9_32.dll" (ByVal vi As Long, ByVal TSETIdx As Long) As Long

Declare Function terM9_setDynamicPatternControl Lib "terM9_32.dll" (ByVal vi As Long, ByVal controlOpcode As Long, ByVal controlCount As Long, ByVal controlCond As Long) As Long

Declare Function terM9_setDynamicPatternFailCapture Lib "terM9_32.dll" (ByVal vi As Long, ByVal failCapture As Integer) As Long

Declare Function terM9_setDynamicPatternResultCapture Lib "terM9_32.dll" (ByVal vi As Long, ByVal resultCapture As Integer) As Long

Declare Function terM9_setDynamicPatternProbeTimingSetIndex Lib "terM9_32.dll" (ByVal vi As Long, ByVal PSETIdx As Long) As Long

Declare Function terM9_setDynamicPatternProbeCapture Lib "terM9_32.dll" (ByVal vi As Long, ByVal probeCapture As Integer) As Long

Declare Function terM9_setDynamicPatternIndex Lib "terM9_32.dll" (ByVal vi As Long, ByVal patternIdx As Long) As Long
